Создано с помощью Colaboratory

--- a/homework_01/pandas.ipynb
+++ b/homework_01/pandas.ipynb
@@ -6,7 +6,6 @@
       "name": "Untitled0.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO3KqZro6K1K7AwE32G4BPz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +35,7 @@
       "source": [
         "import pandas as pd"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -47,7 +46,7 @@
           "height": 142
         },
         "id": "a2GTDb7X5Qkf",
-        "outputId": "7a34cf0f-9919-4021-b154-5bf43a094bf9"
+        "outputId": "ab64c937-461a-4066-c20f-c855fa91e299"
       },
       "source": [
         "authors = pd.DataFrame({\n",
@@ -56,7 +55,7 @@
         "})\n",
         "authors"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -114,7 +113,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 17
+          "execution_count": 2
         }
       ]
     },
@@ -126,7 +125,7 @@
           "height": 266
         },
         "id": "SciJQKoC531D",
-        "outputId": "9a3d0dcd-b452-4388-d2b1-7a92bf358561"
+        "outputId": "9bc3fcad-8109-4160-fe28-344568d039d7"
       },
       "source": [
         "books = pd.DataFrame({\n",
@@ -136,7 +135,7 @@
         "})\n",
         "books"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -226,7 +225,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 18
+          "execution_count": 3
         }
       ]
     },
@@ -238,13 +237,13 @@
           "height": 266
         },
         "id": "dKRpb4lG6Xgw",
-        "outputId": "d2c56fa4-c68c-44b0-f06d-5493d54c714e"
+        "outputId": "f479217d-6fd5-48fa-80fd-2fab37bcdc84"
       },
       "source": [
         "authors_price = pd.merge(authors, books, on='author_id', how='inner')\n",
         "authors_price"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -342,7 +341,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 19
+          "execution_count": 4
         }
       ]
     },
@@ -354,13 +353,13 @@
           "height": 204
         },
         "id": "WeYmpX6O6wky",
-        "outputId": "f72db4ff-8af2-46f3-e834-095de8ee325e"
+        "outputId": "313a2a36-02a7-4c56-d640-4194b61a15c2"
       },
       "source": [
         " top5 = authors_price.nlargest(5, \"price\")\n",
         " top5"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -442,7 +441,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 26
+          "execution_count": 5
         }
       ]
     },
@@ -454,14 +453,13 @@
           "height": 173
         },
         "id": "n1b9_XfN7K5U",
-        "outputId": "08fe4827-ae3e-4845-945a-4b0c61eb57f1"
+        "outputId": "71a99d0f-e468-4110-b3e0-bc1b4518eea5"
       },
       "source": [
-        "gr_authors_price = authors_price.groupby(\"author_name\")\n",
         "authors_stat = authors_price.groupby('author_name')['price'].agg([('min_price','min'),('max_price','max'),('average','mean')])\n",
         "authors_stat"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -530,7 +528,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 31
+          "execution_count": 6
         }
       ]
     },
@@ -542,13 +540,13 @@
           "height": 266
         },
         "id": "Frj54bvP-LAB",
-        "outputId": "8f045ba7-b02d-4c09-be5c-b52dab9bff31"
+        "outputId": "c473533e-d768-4599-b4ac-dd78ebc2d328"
       },
       "source": [
         "authors_price['cover'] = ['твердая', 'мягкая', 'мягкая', 'твердая', 'твердая', 'мягкая', 'мягкая']\n",
         "authors_price"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -654,22 +652,92 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 32
+          "execution_count": 7
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3j1ntgcnDqK7"
+        "id": "3j1ntgcnDqK7",
+        "outputId": "3a7f12af-e5b5-4ca0-f250-1a7cb3a9b1df",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 173
+        }
       },
       "source": [
         "book_info = pd.pivot_table(authors_price, index='author_name', values='price', columns='cover', aggfunc='sum', fill_value=0)\n",
         "res = pd.to_pickle(book_info, \"C:\\book_info.pkl\")\n",
-        "res\n"
+        "book_info\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th>cover</th>\n",
+              "      <th>мягкая</th>\n",
+              "      <th>твердая</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>author_name</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>Островский</th>\n",
+              "      <td>660</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Тургенев</th>\n",
+              "      <td>650</td>\n",
+              "      <td>450</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Чехов</th>\n",
+              "      <td>0</td>\n",
+              "      <td>950</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "cover        мягкая  твердая\n",
+              "author_name                 \n",
+              "Островский      660        0\n",
+              "Тургенев        650      450\n",
+              "Чехов             0      950"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 9
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -678,13 +746,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nE6MGiPaFeD9",
-        "outputId": "6826097d-a622-4490-b576-ace81946df86"
+        "outputId": "69467fb5-2dfc-4edf-903c-ecee6ec958df"
       },
       "source": [
         "book_info2 = pd.read_pickle(\"C:\\book_info.pkl\")\n",
         "book_info2.equals(book_info)  "
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -696,7 +764,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 45
+          "execution_count": 10
         }
       ]
     },
