--- a/homework_01/numpy.ipynb
+++ b/homework_01/numpy.ipynb
@@ -39,6 +39,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "OX3eBEzcJmOQ"
+      },
+      "source": [
+        "1.Создайте массив Numpy под названием a размером 5x2, то есть состоящий из 5 строк и 2 столбцов. Первый столбец должен содержать числа 1, 2, 3, 3, 1, а второй - числа 6, 8, 11, 10, 7. Будем считать, что каждый столбец - это признак, а строка - наблюдение. Затем найдите среднее значение по каждому признаку, используя метод mean массива Numpy. Результат запишите в массив mean_a, в нем должно быть 2 элемента."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -68,6 +77,15 @@
           },
           "execution_count": 35
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NKw2KNEBJ-cd"
+      },
+      "source": [
+        "2.Вычислите массив a_centered, отняв от значений массива “а” средние значения соответствующих признаков, содержащиеся в массиве mean_a. Вычисление должно производиться в одно действие. Получившийся массив должен иметь размер 5x2."
       ]
     },
     {
@@ -104,6 +122,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3nUptJwMKFcu"
+      },
+      "source": [
+        "3.Найдите скалярное произведение столбцов массива a_centered. В результате должна получиться величина a_centered_sp. Затем поделите a_centered_sp на N-1, где N - число наблюдений."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -134,6 +161,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NtfR87ouKSmn"
+      },
+      "source": [
+        "4.Проверьте получившееся число, вычислив ковариацию еще одним способом - с помощью функции np.cov. "
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -160,15 +196,6 @@
           },
           "execution_count": 38
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "6H_45zAEMQOR"
-      },
-      "source": [
-        ""
       ]
     }
   ]
