Создано с помощью Colaboratory

--- a/homework_01/pandas.ipynb
+++ b/homework_01/pandas.ipynb
@@ -39,6 +39,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9j6CKTdaK0-f"
+      },
+      "source": [
+        "1. Создайте датафрейм authors со столбцами author_id и author_name, в которых соответственно содержатся данные: [1, 2, 3] и ['Тургенев', 'Чехов', 'Островский']."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -115,6 +124,15 @@
           },
           "execution_count": 2
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8ZPRqd_xK73J"
+      },
+      "source": [
+        "Затем создайте датафрейм book cо столбцами author_id, book_title и price..."
       ]
     },
     {
@@ -227,6 +245,15 @@
           },
           "execution_count": 3
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "COwVNqgmLEgP"
+      },
+      "source": [
+        "2.Получите датафрейм authors_price, соединив датафреймы authors и books по полю author_id."
       ]
     },
     {
@@ -346,6 +373,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "DMZ_Zb-tLHka"
+      },
+      "source": [
+        "3.Создайте датафрейм top5, в котором содержатся строки из authors_price с пятью самыми дорогими книгами."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -446,6 +482,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "DRbRJo_cLMqn"
+      },
+      "source": [
+        "4.Создайте датафрейм authors_stat на основе информации из authors_price. В датафрейме authors_stat должны быть четыре столбца:\n",
+        "author_name, min_price, max_price и mean_price,\n",
+        "в которых должны содержаться соответственно имя автора, минимальная, максимальная и средняя цена на книги этого автора."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -530,6 +577,16 @@
           },
           "execution_count": 6
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rOcMY83_LYVA"
+      },
+      "source": [
+        "5.Создайте новый столбец в датафрейме authors_price под названием cover, в нем будут располагаться данные о том, какая обложка у данной книги - твердая или мягкая. В этот столбец поместите данные из следующего списка:\n",
+        "['твердая', 'мягкая', 'мягкая', 'твердая', 'твердая', 'мягкая', 'мягкая']."
       ]
     },
     {
@@ -657,21 +714,29 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "sQjxUEkhLgMk"
+      },
+      "source": [
+        "Для каждого автора посчитайте суммарную стоимость книг в твердой и мягкой обложке.  При этом столбцы должны называться \"твердая\" и \"мягкая\", а индексами должны быть фамилии авторов. Пропущенные значения стоимостей заполните нулями"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "3j1ntgcnDqK7",
-        "outputId": "3a7f12af-e5b5-4ca0-f250-1a7cb3a9b1df",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 173
-        }
+        },
+        "outputId": "5f8ba29c-055b-4cf6-9016-2353038851b6"
       },
       "source": [
         "book_info = pd.pivot_table(authors_price, index='author_name', values='price', columns='cover', aggfunc='sum', fill_value=0)\n",
-        "res = pd.to_pickle(book_info, \"C:\\book_info.pkl\")\n",
-        "book_info\n"
+        "book_info"
       ],
-      "execution_count": 9,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -735,8 +800,17 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 11
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "C3lucCksMEcG"
+      },
+      "source": [
+        "Сохраните датасет book_info в формат pickle под названием \"book_info.pkl\". Затем загрузите из этого файла датафрейм и назовите его book_info2. Удостоверьтесь, что датафреймы book_info и book_info2 идентичны."
       ]
     },
     {
@@ -746,13 +820,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nE6MGiPaFeD9",
-        "outputId": "69467fb5-2dfc-4edf-903c-ecee6ec958df"
+        "outputId": "115febdf-09e1-4448-bcc5-2f0d0af67cde"
       },
       "source": [
+        "pd.to_pickle(book_info, \"C:\\book_info.pkl\")\n",
         "book_info2 = pd.read_pickle(\"C:\\book_info.pkl\")\n",
-        "book_info2.equals(book_info)  "
+        "book_info2.equals(book_info) "
       ],
-      "execution_count": 10,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -764,7 +839,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 14
         }
       ]
     },
